fix(discovery/ags): audio player popup alignment

--- a/home-manager/programs/ags/config/style.scss
+++ b/home-manager/programs/ags/config/style.scss
@@ -86,6 +86,34 @@ window.Bar {
         font-size: 16px;
         padding: 0px 0px 0px 8px;
     }
+    .BluetoothStatus {
+        .bluetooth-icon {
+            font-size: 18px;
+            color: $blue;
+        }
+        button {
+            background: none;
+            padding: 0px 0px 0px 4px;
+            box-shadow: none;
+            border: none;
+        }
+    }
+
+    .AudioSlider {
+        .volume-icon {
+            font-size: 14px;
+            color: $mauve;
+        }
+        slider {
+            background-color: $overlay0;
+        }
+        button {
+            background: none;
+            padding: 0px 0px 0px 8px;
+            box-shadow: none;
+            border: none;
+        }
+    }
 
     .Status {
         .RAM {
@@ -119,35 +147,6 @@ window.Bar {
                 margin: 2px;
                 min-width: 22px;
             }
-        }
-    }
-
-    .BluetoothStatus {
-        .bluetooth-icon {
-            font-size: 18px;
-            color: $blue;
-        }
-        button {
-            background: none;
-            padding: 0px 0px 0px 10px;
-            box-shadow: none;
-            border: none;
-        }
-    }
-
-    .AudioSlider {
-        .volume-icon {
-            font-size: 14px;
-            color: $mauve;
-        }
-        slider {
-            background-color: $overlay0;
-        }
-        button {
-            background: none;
-            padding: 0px 0px 0px 10px;
-            box-shadow: none;
-            border: none;
         }
     }
 
